
<resources>
    <string name="app_name">Technological projects Mail.ru Group</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">News</string>
    <string name="title_dashboard">Schedule</string>
    <string name="title_notifications">Profile</string>
    <string name="Groups">Groups</string>
    <string name="about_string">About</string>
    <string name="contacts_string">Contacts</string>
    <string name="accounts_string">Accounts</string>
    <string name="Out_of_account">Log out</string>
    <string name="log_in">Log in</string>
    <string name="copied">"Text is copied"</string>
    <string name="answer_log_out">"Are you sure, you want log out?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="Search">Search</string>
    <string name="e_mail_login">E-mail/Login</string>
    <string name="password">Password</string>
    <string name="error_400">Something wrong! Check your login/password</string>
    <string name="http_failed">No network!</string>
    <string name="load">Loading...</string>
    <string name="disciplines">Disciplines</string>
    <string name="all_disciplines">All disciplines</string>
    <string name="all_semester">Whole semester</string>
    <string name="two_week">Next two weeks</string>
    <string name="expand_more">Expand more...</string>
    <string name="phone_string">Mobile phone</string>
    <string name="mail_string">Mail</string>
    <string name="birthday_string">Birthday</string>
    <string name="feedback">Leave feedback</string>
    <string name="check">Check</string>
    <string name="checked">Checked ✓</string>
    <string name="checking">Checking...</string>
    <string name="check_success">You`ve successfully checked in!</string>
    <string name="error">Something wrong! Please, try later.</string>
    <string name="no_schedule">There is no schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
