<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.technoparkmobileproject.ui.news.NewsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/fragment_open_enter" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.technoparkmobileproject.ui.shedule.ScheduleFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/fragment_close_enter" />
        <action
            android:id="@+id/action_navigation_dashboard_to_groupFragment"
            app:destination="@id/groupFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.technoparkmobileproject.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/item_profile" >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="usrname"
            app:argType="string"
            android:defaultValue='"my"' />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/fragment_fade_enter" />
        <action
            android:id="@+id/action_navigation_notifications_to_groupFragment"
            app:destination="@id/groupFragment" />
    </fragment>
    <fragment
        android:id="@+id/groupFragment"
        android:name="com.example.technoparkmobileproject.group.GroupFragment"
        android:label="fragment_group"
        tools:layout="@layout/fragment_group" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>

</navigation>