<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.technoparkmobileproject.auth.SnowView
        android:id="@+id/snow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".auth.AuthFragment"
        android:elevation="1dp">

        <com.imbryk.viewPager.LoopViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="6dp"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/e_mail_login"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/getBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:backgroundTint="@color/colorButtonAuth"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>
</FrameLayout>